from ucommon 4.1.0 to 4.1.1
- rexlock try method and better thread inheritence
- timer fix for dll linkage
- thread specific storage
- fix for cmake builds with openssl and intl support

from ucommon 4.0.5 to 4.1.0
- security system logging.
- cleanup of cmake.
- clearer idea of what shell::errexit is.
- cleanup of pointer templates, Object pointers now object_pointer, temporary
  is now temporary object, new "generic" smart pointer to be added.
- new containers.h to seperate use of contained resources from thread.h and
  basic threading primitives.
- linked_allocator template added for easy access to a free list managed
  object pool.

from ucommon 4.0.4 to 4.0.5
- smarter openssl search.
- simplified service handling.
- exiting critical handler added.

from ucommon 4.0.3 to 4.0.4
- make it easier to subclass cipher key for special purposes.
- component naming of binaries for combining ucommon with other subprojects.

from ucommon 4.0.2 to 4.0.3
- some changes in file stat macros.

from ucommon 4.0.1 to 4.0.2
- introduction of scrub utility for secure file deletion.
- introduction of mdsub utility for computing file hashes.
- shell::printf always flushes output for console.
- Digest::reset now resets even for cleared contexts.

from ucommon 4.0.0 to 4.0.1
- fix for misnamed library in ucommon-config.

from ucommon 3.4.0 to 4.0.0
- introduction of protocols as abstract bases for mixin classes.
- Socket class tracks last error and has iowait/blocking property.
- Socket int methods return errno() rather than -1 on error.
- buffer protocol created.
- string no longer has dependency on socket.
- ssl and tcp classes reorganized for consistent naming.
- file handling in charfile through character protocol.
- unicode conversions use character protocol.
- templates updated so []'s always emit value references.

from ucommon 3.3.7 to 3.4.0
- simplified to better focus on core runtime mission.
- packaging simplified.
- ccscript moved to bayonne
- ccaudio detached
