@@ -310,7 +310,11 @@ file(GLOB ucommon_inc inc/ucommon/*.h)
 
 if(HAVE_OPENSSL)
     file(GLOB secure_src openssl/*.cpp)
-    set(SECURE_LIBS ssl crypto)
+    if(WIN32)
+        set(SECURE_LIBS ssl crypto gdi32)
+    else()
+        set(SECURE_LIBS ssl crypto)
+    endif()
 elseif(OPENSSL_FOUND)
     file(GLOB secure_src openssl/*.cpp)
     include_directories(${OPENSSL_INCLUDE_DIR})
